# marinade-sdk

programs/marinade-sdk/: Cargo.toml
