[package]
name = "meteora-marinade-sdk"
version = "0.1.1"
authors = ["Marinade finance"]
description = "Created with Anchor"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marinade_sdk"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["cpi"]

[profile.release]
overflow-checks = true

[dependencies]
solana-program = "1.16.13"
spl-token = "3.1.1"
borsh = ">=0.9, <0.11"
